# CPP_Game_Snake

./: CMakeLists.txt
assets/sprites/: apple2.aseprite
headers/: Apple.h  Cell.h  Engine.h  Snake.h  SnakeSection.h  TextureManager.h  Wall.h  engine.hpp
src/: Apple.cpp  Cell.cpp  Engine.cpp  Snake.cpp  SnakeSection.cpp  TextureManager.cpp  Wall.cpp  draw.cpp  input.cpp  main.cpp  update.cpp
